Finished searchBar fix and alignment. Moving on to breakpoints and media queries. Waiting on reply  for layout change approval.

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-.wrapper, #searchSection, #aboutContent p, #contactContent p {
+.wrapper, .search-wrapper, #aboutContent p, #contactContent p {
   margin-left: auto;
   margin-right: auto; }
 
@@ -74,66 +74,87 @@ footer {
   footer p {
     padding: 50px 0; }
 
-#searchSection {
+/*#searchSection {
   text-align: center;
   width: 80%;
   height: 30px;
-  margin-top: 50px; }
-  #searchSection p {
-    background-color: #222;
-    color: #EEE;
+  margin-top: $large-amount;
+  @extend %auto-center;
+
+  p {
+    background-color: $primary-color;
+    color: $secondary-color;
     text-align: left;
     width: 100%;
     margin-bottom: 0;
-    padding: 0 0 0 0; }
-
+    padding: 0 0 0 0;
+  }
+}
+*/
 .js-search-field,
 .js-search-button,
-.search-wrapper {
+.search-wrapper,
+.search-wrapper p {
   position: relative;
   padding: 10px; }
 
 .search-wrapper {
-  width: 500px;
-  margin: auto;
+  text-align: center;
+  width: 80%;
   margin-top: 50px; }
+  .search-wrapper p {
+    background-color: #222;
+    color: #EEE;
+    text-align: left;
+    max-width: 400px;
+    margin: 0;
+    padding: 2px 10px; }
 
 .js-search-field {
-  width: 80%;
+  width: 100%;
   border: 1px solid #ccc;
-  outline: 0;
-  border-radius: 15px; }
+  outline: 0; }
   .js-search-field .js-search-field:focus {
     box-shadow: 0 0 15px 5px #b0e0ee;
     border: 2px solid #bebede; }
 
 .js-search-button {
+  background-image: url("../assets/search.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 20px;
+  height: 35px;
   border: 1px solid transparent;
+  border-left: 1px solid #bdbdbd;
   background-color: transparent;
-  display: inline-block;
-  vertical-align: middle;
-  outline: 0;
-  cursor: pointer; }
-  .js-search-button:after {
-    content: "X";
-    display: block;
-    width: 15px;
-    height: 15px;
-    position: absolute;
-    background-color: #FA9595;
-    z-index: 1;
-    right: 35px;
-    top: 0;
-    bottom: 0;
-    margin: auto;
-    padding: 2px;
-    border-radius: 50%;
-    text-align: center;
-    color: white;
-    font-weight: normal;
-    font-size: 12px;
-    box-shadow: 0 0 2px #E50F0F;
-    cursor: pointer; }
+  position: absolute;
+  bottom: 10px;
+  right: -10px;
+  padding: 0 20px;
+  cursor: pointer;
+  /*
+  &:after {
+  	content: url('../assets/search.png');
+  	display: block;
+  	width: 15px;
+  	height: 15px;
+  	position: absolute;
+  	background-color: #FA9595;
+  	z-index:1;
+  	right: 35px;
+  	top: 0;
+  	bottom: 0;
+  	margin: auto;
+  	padding: 2px;
+  	border-radius: 50%;
+  	text-align: center;
+  	color: white;
+  	font-weight: normal;
+  	font-size: 12px;
+  	box-shadow: 0 0 2px #E50F0F;
+  	cursor: pointer;
+  }
+  */ }
 
 #homeContent {
   min-height: calc(100vh - 70px);
@@ -150,8 +171,10 @@ footer {
   margin: 0 auto 100px auto;
   padding: 0;
   list-style-type: none;
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  -ms-grid-columns: (minmax(200px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-gap: 100px 20px; }
   #homeContent ul li {
     width: 100%;
