--- a/scss/pageSpec/_homePage.scss
+++ b/scss/pageSpec/_homePage.scss
@@ -1,4 +1,4 @@
-#searchSection {
+/*#searchSection {
   text-align: center;
   width: 80%;
   height: 30px;
@@ -14,26 +14,36 @@
     padding: 0 0 0 0;
   }
 }
-
+*/
 
 .js-search-field,
 .js-search-button,
-.search-wrapper {
+.search-wrapper,
+.search-wrapper p {
   position: relative;
-  padding: 10px;
+  padding: $small-amount;
 }
 
 .search-wrapper {
-	width: 500px;
-	margin: auto;
-	margin-top: 50px;
+  text-align: center;
+  width: 80%;
+  margin-top: $large-amount;
+  @extend %auto-center;
+
+  p {
+    background-color: $primary-color;
+    color: $secondary-color;
+    text-align: left;
+    max-width: 400px;
+    margin: 0;
+    padding: 2px 10px;
+  }
 }
 
 .js-search-field {
-  width: 80%;
+  width: 100%;
 	border: 1px solid #ccc;
   outline: 0;
-  border-radius: 15px;
 
   .js-search-field:focus {
 	box-shadow: 0 0 15px 5px #b0e0ee;
@@ -42,17 +52,25 @@
 }
 
 .js-search-button {
+  background-image: url('../assets/search.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 20px;
+  height: 35px;
   border:1px solid transparent;
+  border-left: 1px solid #bdbdbd;
 	background-color: transparent;
-	display: inline-block;
-	vertical-align: middle;
-  outline: 0;
+  position: absolute;
+  bottom: 10px;
+  right: -10px;
+  padding: 0 20px;
   cursor: pointer;
   //transition: border-radius .5s, background-color .5s;
   //@include brs(0,1em,1em,0);
 
+/*
   &:after {
-  	content: "X";
+  	content: url('../assets/search.png');
   	display: block;
   	width: 15px;
   	height: 15px;
@@ -72,6 +90,7 @@
   	box-shadow: 0 0 2px #E50F0F;
   	cursor: pointer;
   }
+  */
 }
 
 #homeContent {
